@@ -15,7 +15,7 @@
 				<left>0</left>
 				<top>50</top>
 				<width>460</width>
-				<height>520</height>
+				<height>557</height>
 				<onleft>Close</onleft>
 				<onright>Close</onright>
 				<onup>9000</onup>
