@@ -126,6 +126,8 @@
 			<shortcut label="Debug Grid" type="::LOCAL::31289" grouping="commands" icon="DefaultShortcut.png">Skin.ToggleSetting(DebugGrid)</shortcut>
 			<shortcut label="Profiles" type="::LOCAL::13200" grouping="commands" icon="DefaultShortcut.png">ActivateWindow(Profiles)</shortcut>
 			<shortcut label="Logout" type="::LOCAL::20126" grouping="commands" icon="DefaultShortcut.png">System.LogOff</shortcut>
+			<shortcut label="Edit Shutdown Menu" type="::LOCAL::31470" grouping="commands" icon="DefaultShortcut.png">RunScript(script.skinshortcuts,type=manage&amp;nolabels=True&amp;group=shutdownmenu)</shortcut>
+			<shortcut label="Edit Main Menu" type="::LOCAL::31471" grouping="commands" icon="DefaultShortcut.png">RunScript(script.skinshortcuts,type=manage&amp;nolabels=True&amp;group=mainmenu)</shortcut>
 		</node>
 
 		
